_notes/Linear_Algebra/reports/chapter_02/LA_C2S07.err.log
Traceback (most recent call last):
  File "C:\Users\hatef\anaconda3\envs\jbook\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\hatef\anaconda3\envs\jbook\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\hatef\anaconda3\envs\jbook\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\hatef\anaconda3\envs\jbook\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\hatef\anaconda3\envs\jbook\lib\asyncio\base_events.py", line 616, in run_until_complete
    return future.result()
  File "C:\Users\hatef\anaconda3\envs\jbook\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\hatef\anaconda3\envs\jbook\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\hatef\anaconda3\envs\jbook\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
```{admonition} Theorem: Inverses of Transposes and Products

1. Given an invertible matrix $A$, the relationship is as follows:
\begin{align*}
(A^T)^{-1} = (A^{-1})^T.
\end{align*}

2. When dealing with invertible matrices $A$ and $B, the corresponding expression is:
\begin{align*}
(AB)^{-1} = B^{-1}A^{-1}.
\end{align*}

3. In the context of invertible matrices $A$, $B$, and $C, the relationship is defined as:
\begin{align*}
(ABC)^{-1} = C^{-1}B^{-1}A^{-1}.
\end{align*}

```
------------------

[1;36m  Cell [1;32mIn[1], line 1[1;36m[0m
[1;33m    ```{admonition} Theorem: Inverses of Transposes and Products[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (2437127544.py, line 1)

